Creating new organization from zero

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -544,6 +544,7 @@
  <a href="/" class="btn-secondary">Главная</a>
  <a href="/organizations" class="btn-secondary">К списку</a>
  <a href="/analytics" class="btn-secondary">Аналитика</a>
+ <a href="/organizations/create" class="btn-secondary">Добавить</a>
  </div>
  </div>
 
