--- a/app/templates/organizations.html
+++ b/app/templates/organizations.html
@@ -493,7 +493,8 @@
  <div class="header-buttons">
  <a href="/" class="btn btn-secondary">Главная</a>
  <a href="/analytics" class="btn btn-secondary">Аналитика</a>
- <a href="/upload" class="btn btn-primary">Загрузить данные</a>
+ <a href="/upload" class="btn btn-secondary">Загрузить данные</a>
+ <a href="/organizations/create" class="btn btn-primary">Добавить</a>
 </div>
 </div>
 
